# CS6210-AOS

./: README.md
labs/barriers/: plotter.py
labs/barriers/config/: mpi_tour.out  mpi_tour_8.out
labs/barriers/config/dis_pbs/: 10-node.pbs  12-node.pbs  2-node.pbs  3-node.pbs  4-node.pbs  6-node.pbs  8-node.pbs  des_8.out  mpi_des_2.out  mpi_dis_10.out  mpi_dis_12.out  mpi_dis_4.out  mpi_dis_8.out
labs/barriers/config/mp_mpi/: 10-node.pbs  2-node.pbs  4-node.pbs  6-node.pbs  8-node.pbs  jupyter.o146679  mpi_mp_2_2.out  mpi_mp_2_4.out  mpi_mp_4_12.out  mpi_mp_4_2.out  mpi_mp_4_8.out  mpi_mp_6_12.out  mpi_mp_8_10.out  mpi_mp_8_2.out
labs/barriers/config/mp_mpi/2_8/: 2_8_mpi_mp_2_10.out  2_8_mpi_mp_2_12.out  2_8_mpi_mp_2_2.out  2_8_mpi_mp_2_4.out  2_8_mpi_mp_2_6.out  (+19 more)
labs/barriers/config/tour_pbs/: 1-node.pbs  10-node.pbs  12-node.pbs  2-node.pbs  4-node.pbs  6-node.pbs  8-node.pbs  mpi_tour_6.out  mpi_tour_8.out
labs/barriers/mpi_dissemination_barrier/: Makefile  dissemination_barrier.c
labs/barriers/mpi_omp_tourmination_barrier/: Makefile  tourmination_barrier.c
labs/barriers/mpi_tour/: Makefile  tournament_barrier.c
labs/barriers/omp_centralized_barrier/: Makefile  centralized_barrier.c
labs/barriers/omp_tournament_barrier/: Makefile  tournament_barrier.c
labs/barriers/output/: centralized_omp_10.out  centralized_omp_12.out  centralized_omp_14.out  centralized_omp_16.out  centralized_omp_2.out  centralized_omp_4.out  centralized_omp_6.out  centralized_omp_8.out  mpi_dis_6.out  mpi_mp_2_12.out  mpi_mp_2_8.out  mpi_mp_4_6.out  mpi_mp_6_10.out  mpi_mp_6_2.out  mpi_mp_6_4.out  mpi_mp_6_6.out  mpi_mp_8_8.out  mpi_tour_10.out  mpi_tour_12.out  mpi_tour_2.out  mpi_tour_4.out  tournament_omp_10.out  tournament_omp_12.out  tournament_omp_14.out  tournament_omp_16.out  tournament_omp_2.out  tournament_omp_4.out  tournament_omp_6.out  tournament_omp_8.out
labs/prelab/: Answers.txt  producer_consumer.c
labs/project1/: .gitignore  HowToCreateVMs-Ubuntu.md  README.md  assignfiletoallvm.py  destroyallvm.py  setallmaxmemory.py  shutdownallvm.py  startallvm.py  testLibrary.py  vm.py
labs/project1/cpu/: HowToDoTest.md  Makefile  README.md  assignall.sh  cleanall.sh  killall.py  makeall.sh  monitor.py  runtest1.py  runtest2.py  runtest3.py  runtest4.py  runtest5.py  vcpu_scheduler.c
labs/project1/memory/: Makefile  README.md  assignall.sh  cleanall.sh  killall.py  makeall.sh  memory_coordinator  memory_coordinator.c  monitor.py  runtest1.py  runtest2.py  runtest3.py
labs/project3-oncampus/: CMakeLists.txt  README.md  setup.md
labs/project3-oncampus/src/: CMakeLists.txt  README  README.md  store.cc  threadpool.cc  threadpool.h
labs/project3-oncampus/test/: CMakeLists.txt
labs/project4-oncampus/: CMakeLists.txt  INSTALL.md  README.md  description.md  structure.md
labs/project4-oncampus/src/: CMakeLists.txt  GenerateProtos.cmake  file_shard.h  mapreduce_spec.h  master.h  masterworker.proto  mr_tasks.h  worker.h
labs/project4-oncampus/test/: CMakeLists.txt  Makefile  main.cc  user_tasks.cc
labs/project4-oncampus/test/input/: testdata_1.txt  testdata_2.txt  testdata_3.txt
(+76 files in other folders)
